<resources>
  <string name="app_name" translatable="true">Stock Hawk</string>

  <string name="action_example" translatable="false">Example action</string>
  <!--action bar clickables-->

  <string name="action_change_units" translatable="true">Change Units</string>

  <!--adding new stock-->
  <string name="symbol_search" translatable="true">Symbol Search</string>
  <string name="content_test" translatable="true">Search for a Stock Symbol</string>
  <string name="input_hint" translatable="false">FB</string>
  <string name="add_stk" translatable="true">add new stock</string>

  <!--Toasts-->
  <string name="network_toast" translatable="true">Uh-oh! This app requires an internet connection</string>
  <string name="not_char" translatable="true">Only English characters</string>
  <string name="not_stock" translatable="true">Sorry can\'t find this stock</string>
  <string name="saved_stock" translatable="true">This stock is already saved!</string>

    <!--snack-->
    <string name="no_connection" translatable="true">No internet connection!</string>
    <string name="retry" translatable="true">RETRY</string>


  <!--Graph-->
  <string name="graph_high" translatable="true">High </string>
  <string name="graph_low" translatable="true">Low</string>
  <string name="graph_date"  translatable="true">tap on graph</string>
  <string name="grap_placeholder">----</string>
  <string name="graph_company_name"  translatable="true">Company Name</string>
  <string name="graph_high_value"  translatable="true">ٍStock High Value</string>
  <string name="graph_date_desc"  translatable="true">Date</string>
  <string name="graph_low_desc"  translatable="true">Stock Low Value</string>
  <string name="graph_graph"  translatable="true">Plotted Graph</string>
  <string name="from"  translatable="true">from</string>
  <string name="to"  translatable="true">to</string>
  <string name="graph_from_date"  translatable="true">Pick Start Date</string>
  <string name="graph_to_date"  translatable="true">Pick End Date</string>
  <string name="graph_update_plot"  translatable="true">Update Plot</string>

  <!--not visable to user-->
  <string name="input_prefill" translatable="false"></string>
  <string name="STOCK_NOT_FOUND" translatable="false">-1</string>
  <string name="STOCK_UNKNOWN" translatable="false">0</string>
  <string name="pref_status_stock_status" translatable="false">stock-status</string>
  <string name="MENU_SYM" translatable="false">symbol</string>
<string name="list_sym" translatable="false">GOOG</string>
    <string name="list_bid" translatable="false">1000.00</string>
    <string name="list_change" translatable="false">100%</string>
    <string name="app_icon" translatable="false">Application Logo</string>

</resources>
