<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"

    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    app:paddingStart="16dp"
    app:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:id="@+id/list_item_quote"



    >
  <TextView
      android:id="@+id/stock_symbol"
      style="@style/StockSymbolTextStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="start|center_vertical"
      tools:text="@string/list_sym"
      android:layoutDirection="locale"
      android:textDirection="locale"

      />
  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="end"
      >
    <TextView
        android:id="@+id/bid_price"
        style="@style/BidPriceTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        tools:text="@string/list_bid"
        android:layoutDirection="locale"
        android:textDirection="locale"
        />
    <TextView
        android:id="@+id/change"
        android:background="@drawable/percent_change_pill"
        style="@style/PercentChangeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        tools:text="@string/list_change"
        android:layoutDirection="locale"
        android:textDirection="locale"
        />
  </LinearLayout>
</LinearLayout>

</android.support.v7.widget.CardView>